# autograd-from-scratch

./: README.md  pyproject.toml
notebooks/: testing_autograd.ipynb
src/: autograd.py  utils.py
